{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 39,
  "lineage": "1e052470-65c9-81c0-1a1e-d7e41785a414",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/loadBalancers/healthcare-lb/frontendIPConfigurations/PublicIPAddress",
                "name": "PublicIPAddress",
                "outbound_rules": [
                  "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/loadBalancers/healthcare-lb/outboundRules/OutboundRule"
                ],
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/publicIPAddresses/healthcare-alb-ip"
              }
            ],
            "id": "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/loadBalancers/healthcare-lb",
            "location": "centralindia",
            "name": "healthcare-lb",
            "resource_group_name": "Healthcare-RG",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.alb_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "bap",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/loadBalancers/healthcare-lb/backendAddressPools/HealthcareBackendPool",
            "loadbalancer_id": "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/loadBalancers/healthcare-lb",
            "name": "HealthcareBackendPool",
            "outbound_rules": [
              "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/loadBalancers/healthcare-lb/outboundRules/OutboundRule"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.alb",
            "azurerm_public_ip.alb_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/loadBalancers/healthcare-lb/probes/http-running-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/loadBalancers/healthcare-lb",
            "name": "http-running-probe",
            "number_of_probes": 2,
            "port": 32000,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.alb",
            "azurerm_public_ip.alb_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "backend_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/loadBalancers/healthcare-lb/backendAddressPools/HealthcareBackendPool"
            ],
            "backend_port": 31000,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/loadBalancers/healthcare-lb/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 31000,
            "id": "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/loadBalancers/healthcare-lb/loadBalancingRules/LBRule-Backend",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/loadBalancers/healthcare-lb",
            "name": "LBRule-Backend",
            "probe_id": "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/loadBalancers/healthcare-lb/probes/http-running-probe",
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.alb",
            "azurerm_lb_backend_address_pool.bap",
            "azurerm_lb_probe.probe",
            "azurerm_public_ip.alb_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "frontend_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/loadBalancers/healthcare-lb/backendAddressPools/HealthcareBackendPool"
            ],
            "backend_port": 32000,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/loadBalancers/healthcare-lb/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/loadBalancers/healthcare-lb/loadBalancingRules/LBRule-Frontend",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/loadBalancers/healthcare-lb",
            "name": "LBRule-Frontend",
            "probe_id": "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/loadBalancers/healthcare-lb/probes/http-running-probe",
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.alb",
            "azurerm_lb_backend_address_pool.bap",
            "azurerm_lb_probe.probe",
            "azurerm_public_ip.alb_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/networkInterfaces/healthcare-nic",
            "internal_domain_name_suffix": "wo0xadt5ntcetgo3pvr30ofgpb.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/publicIPAddresses/healthcare-vm-ssh-ip",
                "subnet_id": "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/virtualNetworks/healthcare-vnet/subnets/internal"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "mac_address": "70-A8-A5-67-71-78",
            "name": "healthcare-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "Healthcare-RG",
            "virtual_machine_id": "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Compute/virtualMachines/Healthcare-K8s-Node"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.vm_ssh_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/loadBalancers/healthcare-lb/backendAddressPools/HealthcareBackendPool",
            "id": "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/networkInterfaces/healthcare-nic/ipConfigurations/internal|/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/loadBalancers/healthcare-lb/backendAddressPools/HealthcareBackendPool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/networkInterfaces/healthcare-nic"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.alb",
            "azurerm_lb_backend_address_pool.bap",
            "azurerm_network_interface.nic",
            "azurerm_public_ip.alb_ip",
            "azurerm_public_ip.vm_ssh_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/networkSecurityGroups/healthcare-nsg",
            "location": "centralindia",
            "name": "healthcare-nsg",
            "resource_group_name": "Healthcare-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "31000",
                  "32000"
                ],
                "direction": "Inbound",
                "name": "AllowAzureLoadBalancer",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "AzureLoadBalancer",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "31000",
                  "32000"
                ],
                "direction": "Inbound",
                "name": "AllowK8sNodePorts",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_lb_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "",
            "destination_port_ranges": [
              "31000",
              "32000"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/networkSecurityGroups/healthcare-nsg/securityRules/AllowAzureLoadBalancer",
            "name": "AllowAzureLoadBalancer",
            "network_security_group_name": "healthcare-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "Healthcare-RG",
            "source_address_prefix": "AzureLoadBalancer",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "k8s_ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "",
            "destination_port_ranges": [
              "31000",
              "32000"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/networkSecurityGroups/healthcare-nsg/securityRules/AllowK8sNodePorts",
            "name": "AllowK8sNodePorts",
            "network_security_group_name": "healthcare-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "Healthcare-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/networkSecurityGroups/healthcare-nsg/securityRules/AllowSSH",
            "name": "AllowSSH",
            "network_security_group_name": "healthcare-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "Healthcare-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "alb_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/publicIPAddresses/healthcare-alb-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.172.226.50",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "healthcare-alb-ip",
            "resource_group_name": "Healthcare-RG",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm_ssh_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/publicIPAddresses/healthcare-vm-ssh-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.204.82.116",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "healthcare-vm-ssh-ip",
            "resource_group_name": "Healthcare-RG",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/virtualNetworks/healthcare-vnet/subnets/internal",
            "name": "internal",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Healthcare-RG",
            "virtual_network_name": "healthcare-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/virtualNetworks/healthcare-vnet/subnets/internal",
            "network_security_group_id": "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/networkSecurityGroups/healthcare-nsg",
            "subnet_id": "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/virtualNetworks/healthcare-vnet/subnets/internal"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "0e70b5b3-6c7f-49c4-99dd-7d63dd38a679",
            "id": "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/virtualNetworks/healthcare-vnet",
            "location": "centralindia",
            "name": "healthcare-vnet",
            "resource_group_name": "Healthcare-RG",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/virtualNetworks/healthcare-vnet/subnets/internal",
                "name": "internal",
                "security_group": "/subscriptions/b90be6b5-f715-47e4-86cc-0cbec722b1eb/resourceGroups/Healthcare-RG/providers/Microsoft.Network/networkSecurityGroups/healthcare-nsg"
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}